# cerc-kyp-test

./: .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  fetch_all.sh  pyproject.toml  requirements.txt
company_data/: AAPL.json  AMZN.json  GOOGL.json  MSFT.json  NVDA.json
data/: AAPL.json  AMZN.json  APPL.json  BA.json  GOOGL.json  HPC.json  IRBT.json  ITUB4.SA.json  JNJ.json  JPM.json  KO.json  MGLU3.SA.json  MSFT.json  NDVA.json  NFLX.json  NVDA.json  PETR4.SA.json  PETR4.json  PFE.json  V.json  VALE3.SA.json  WMT.json  XOM.json  aapl_kyp_minimal.json  aapl_risk_report.txt
prompts/: report_template.jinja  risk_template.jinja
reports/: AAPL_risk_report_gemini.md  AMZN_risk_report_gemini.md  GOOGL_risk_report_gemini.md  ITUB4.SA_risk_report_gemini.md  JNJ_risk_report_gemini.md  JPM_risk_report_gemini.md  KO_risk_report_gemini.md  MGLU3.SA_risk_report_gemini.md  MSFT_risk_report_gemini.md  NFLX_risk_report_gemini.md  NFLX_risk_report_openrouter.md  NVDA_risk_report_gemini.md  PETR4.SA_risk_report_gemini.md  PFE_risk_report_gemini.md  VALE3.SA_risk_report_gemini.md  V_risk_report_gemini.md  WMT_risk_report_gemini.md  XOM_risk_report_gemini.md
scripts/: fetch_companies.py  fetch_companies_test.py
src/: __init__.py  cli.py  core.py  data_fetcher.py  data_normalization.py  pipeline.py  ratios.py  risk_analyst.py  risk_analyst_gemini.py  risk_analyst_ollama.py  template_engine.py  utils.py
