[project]
name = "cerc-kyp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "google-genai>=1.53.0",
    "jinja2>=3.1.6",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.7",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]
[tool.ruff]
line-length = 100
